@@ -3639,19 +3639,6 @@ name|hash
 argument_list|)
 condition|)
 block|{
-if|if
-condition|(
-name|nodes
-operator|==
-literal|null
-condition|)
-name|nodes
-operator|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|()
-expr_stmt|;
 name|DocCollection
 name|targetColl
 init|=
@@ -3742,6 +3729,21 @@ name|getName
 argument_list|()
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|nodes
+operator|==
+literal|null
+condition|)
+name|nodes
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
 name|nodes
 operator|.
 name|add
@@ -4916,6 +4918,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+specifier|final
 name|List
 argument_list|<
 name|Node
@@ -5228,7 +5231,9 @@ name|NamedList
 argument_list|<
 name|String
 argument_list|>
-argument_list|()
+argument_list|(
+literal|1
+argument_list|)
 expr_stmt|;
 name|rsp
 operator|.
@@ -7231,6 +7236,7 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
+specifier|final
 name|List
 argument_list|<
 name|Node
@@ -7518,7 +7524,9 @@ name|NamedList
 argument_list|<
 name|String
 argument_list|>
-argument_list|()
+argument_list|(
+literal|1
+argument_list|)
 expr_stmt|;
 name|rsp
 operator|.
@@ -8315,6 +8323,7 @@ operator|!=
 literal|null
 condition|)
 block|{
+specifier|final
 name|List
 argument_list|<
 name|Node
@@ -8324,7 +8333,12 @@ init|=
 operator|new
 name|ArrayList
 argument_list|<>
+argument_list|(
+name|replicaProps
+operator|.
+name|size
 argument_list|()
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -8442,6 +8456,7 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
+specifier|final
 name|List
 argument_list|<
 name|Node
@@ -8643,7 +8658,9 @@ name|NamedList
 argument_list|<
 name|String
 argument_list|>
-argument_list|()
+argument_list|(
+literal|1
+argument_list|)
 expr_stmt|;
 name|rsp
 operator|.
@@ -10105,17 +10122,6 @@ operator|.
 name|getClusterState
 argument_list|()
 decl_stmt|;
-name|List
-argument_list|<
-name|Node
-argument_list|>
-name|urls
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|()
-decl_stmt|;
 name|Map
 argument_list|<
 name|String
@@ -10152,6 +10158,23 @@ name|clusterState
 argument_list|)
 throw|;
 block|}
+specifier|final
+name|List
+argument_list|<
+name|Node
+argument_list|>
+name|urls
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|slices
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
 for|for
 control|(
 name|Map
@@ -10262,10 +10285,8 @@ if|if
 condition|(
 name|urls
 operator|.
-name|size
+name|isEmpty
 argument_list|()
-operator|==
-literal|0
 condition|)
 block|{
 return|return
