@@ -413,6 +413,9 @@ Other Changes
 * SOLR-8221: MiniSolrCloudCluster should create subdirectories for its nodes
   (Alan Woodward)
 
+* SOLR-8218: DistributedUpdateProcessor (initialCapacity) tweaks
+  (Christine Poerschke)
+
 ==================  5.3.1 ==================
 
 Bug Fixes
